--- a/PSCIDEMO/Pages/Index.cshtml
+++ b/PSCIDEMO/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p> Github actions Example</p>
+    <p> Github actions Example, make another chaneg on branch</p>
 </div>
